[package]
name = "macroquad"
version = "0.4.2"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/not-fl3/macroquad"
repository = "https://github.com/not-fl3/macroquad"
description = """
Simple and easy to use graphics library
"""
readme="README.md"

[features]
audio = ["quad-snd"]
log-rs = ["log"]
default = []

[package.metadata.android]
assets = "examples/"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { version = "0.4", features = ["log-impl"] }
quad-rand = "0.2.1"
glam = {version = "0.24", features = ["scalar-math","mint"] }
fontdue = { git = "https://github.com/not-fl3/fontdue.git", default-features=false, features = ["std"] }
backtrace = { version = "0.3.60", optional = true, default-features = false, features = [ "std", "libbacktrace" ] }
log = { version = "0.4", optional = true }
quad-snd = { version = "0.2", optional = true }
nanogltf = "0.1"
shadermagic = "0.1"
zune-jpeg = "*"
zune-png = "*"
zune-core = "*"
quad-gl = { git = "https://github.com/not-fl3/quad-gl", branch = "v0.4" }

[dev-dependencies]
dolly = "*"

#[patch."https://github.com/not-fl3/quad-gl"]
#quad-gl = { path = '../quad-gl' }

#[patch."https://github.com/not-fl3/miniquad"]
#miniquad = { path = '../miniquad' }

[patch.crates-io]
macroquad = { path = './' }

#quad-snd = {path = '../quad-snd'}
#miniquad = { path = '../miniquad' }
#miniquad = { git = 'https://github.com/not-fl3/miniquad.git' }
#fontdue = { path = '../fontdue' }
#quad-gl = {path = '../quad-gl'}
#zune-jpeg = { path = "../zune-image/zune-jpeg" }
#zune-png = { path = "../zune-image/zune-png" }
#zune-core = { path = "../zune-image/zune-core" }
