[package]
name = "macroquad"
version = "0.4.14"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/not-fl3/macroquad"
repository = "https://github.com/not-fl3/macroquad"
description = """
Simple and easy to use graphics library
"""
readme="README.md"
license = "MIT OR Apache-2.0"

[features]
audio = ["quad-snd"]
log-rs = ["log"]
glam-serde = ["glam/serde"]
default = []

[package.metadata.android]
assets = "examples/"

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { version = "=0.4.8", features = ["log-impl"] }
quad-rand = "0.2.3"
glam = { version = "0.27", features = ["scalar-math"] }
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
macroquad_macro = { version = "0.1.8", path = "macroquad_macro" }
fontdue = "0.9"
backtrace = { version = "0.3.60", optional = true }
log = { version = "0.4", optional = true }
quad-snd = { version = "0.2", optional = true }

[dev-dependencies]
macroquad-particles = { path = "./particles" }
macroquad-tiled = { path = "./tiled" }
macroquad-profiler = { path = "./profiler" }
macroquad-platformer = { path = "./physics-platformer" }

# workaround to fix the examples
# this allows to use macroquad-particles in examples without two versions of macroquad
[patch.crates-io]
macroquad = { path = './' }

#quad-snd = {path = '../quad-snd'}
#miniquad = { path = '../miniquad' }
#miniquad = { git = "https://github.com/not-fl3/miniquad", branch = "msaa_render_texture" }
#quad-gl = {path = './quad-gl'}

